correcion de archivo balances. listo base entregable

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@
 
 notas
 
+# Archivos pesados
 produccin-de-petrleo-por-yacimiento.csv
+produccin-de-gas-por-yacimiento.csv
+
+importaciones-exportaciones.csv
