visualizaciones ponencia arg-vzla

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ produccin-de-petrleo-por-yacimiento.csv
 produccin-de-gas-por-yacimiento.csv
 
 importaciones-exportaciones.csv
+produccin-de-pozos-de-gas-y-petrleo-2021.csv
